--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,4 @@
-thead {
-  background-color: rgba(255, 255, 255, 0.8);
-}
-.table>tbody>tr>td {
-  vertical-align: middle;
+body {
+	margin: 0;
+	overflow: hidden;
 }
