--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,11 @@
 body {
-    padding-top: 70px;
-}
-
-	#srcArea, #configArea {
-	width: 100%;
-	height: 300px;	
-	font-size: 10px;
+    padding-top: 50px;
 }
 
 .row {
     margin-bottom: 5px;  
 }
 
-
-
-textarea {
-	resize: none;
+#ex1Slider .slider-selection {
+	background: #BABABA;
 }
